--- a/inst/css/diffobj.css
+++ b/inst/css/diffobj.css
@@ -51,70 +51,70 @@ DIV.diffobj_container DIV.header {
 }
 /* github inspired color scheme - default ------------------------------------*/
 
-DIV.diffobj_container SPAN.word.insert,
-DIV.diffobj_container DIV.line>DIV.insert {
+DIV.diffobj_container.light.rgb SPAN.word.insert,
+DIV.diffobj_container.light.rgb DIV.line>DIV.insert {
   background-color: #a6f3a6;
 }
-DIV.diffobj_container SPAN.word.delete,
-DIV.diffobj_container DIV.line>DIV.delete {
+DIV.diffobj_container.light.rgb SPAN.word.delete,
+DIV.diffobj_container.light.rgb DIV.line>DIV.delete {
   background-color: #f8cbcb;
 }
-DIV.diffobj_container DIV.text>DIV.insert {
+DIV.diffobj_container.light.rgb DIV.text>DIV.insert {
   background-color: #eaffea;
 }
-DIV.diffobj_container DIV.text>DIV.insert,
-DIV.diffobj_container DIV.line>DIV.insert {
+DIV.diffobj_container.light.rgb DIV.text>DIV.insert,
+DIV.diffobj_container.light.rgb DIV.line>DIV.insert {
   border-left: 1px solid #33bb33;
 }
-DIV.diffobj_container DIV.text>DIV.delete {
+DIV.diffobj_container.light.rgb DIV.text>DIV.delete {
   background-color: #ffecec;
 }
-DIV.diffobj_container DIV.text>DIV.delete,
-DIV.diffobj_container DIV.line>DIV.delete {
+DIV.diffobj_container.light.rgb DIV.text>DIV.delete,
+DIV.diffobj_container.light.rgb DIV.line>DIV.delete {
   border-left: 1px solid #cc6666;
 }
-DIV.diffobj_container DIV.header {
+DIV.diffobj_container.light.rgb DIV.header {
   background-color: #e0e6fa;
   border-left: 1px solid #9894b6;
 }
-DIV.diffobj_container DIV.line>DIV.match {
+DIV.diffobj_container.light.rgb DIV.line>DIV.match {
   border-left: 1px solid #888888;
 }
 /* Yellow Blue variation -----------------------------------------------------*/
 
-DIV.diffobj_container.yb SPAN.word.insert,
-DIV.diffobj_container.yb DIV.line>DIV.insert {
+DIV.diffobj_container.light.yb SPAN.word.insert,
+DIV.diffobj_container.light.yb DIV.line>DIV.insert {
   background-color: #cbcbf8;
 }
-DIV.diffobj_container.yb SPAN.word.delete,
-DIV.diffobj_container.yb DIV.line>DIV.delete {
+DIV.diffobj_container.light.yb SPAN.word.delete,
+DIV.diffobj_container.light.yb DIV.line>DIV.delete {
   background-color: #f0f0a6;
 }
-DIV.diffobj_container.yb DIV.text>DIV.insert {
+DIV.diffobj_container.light.yb DIV.text>DIV.insert {
   background-color: #eaeaff;
 }
-DIV.diffobj_container.yb DIV.text>DIV.insert,
-DIV.diffobj_container.yb DIV.line>DIV.insert {
+DIV.diffobj_container.light.yb DIV.text>DIV.insert,
+DIV.diffobj_container.light.yb DIV.line>DIV.insert {
   border-left: 1px solid #3333bb;
 }
-DIV.diffobj_container.yb DIV.text>DIV.delete {
+DIV.diffobj_container.light.yb DIV.text>DIV.delete {
   background-color: #eeeecc;
 }
-DIV.diffobj_container.yb DIV.text>DIV.delete,
-DIV.diffobj_container.yb DIV.line>DIV.delete {
+DIV.diffobj_container.light.yb DIV.text>DIV.delete,
+DIV.diffobj_container.light.yb DIV.line>DIV.delete {
   border-left: 1px solid #aaaa55;
 }
-DIV.diffobj_container.yb DIV.header {
+DIV.diffobj_container.light.yb DIV.header {
   background-color: #afafaf;
   border-left: 1px solid #e3e3e3;
   color: #e9e9e9;
 }
-DIV.diffobj_container.yb DIV.text>DIV.match {
+DIV.diffobj_container.light.yb DIV.text>DIV.match {
   background-color: #ffffff;
 }
-DIV.diffobj_container.yb DIV.line {
+DIV.diffobj_container.light.yb DIV.line {
   background-color: #eeeeee;
 }
-DIV.diffobj_container.yb DIV.line>DIV.match {
+DIV.diffobj_container.light.yb DIV.line>DIV.match {
   border-left: 1px solid #888888;
 }
