--- a/inst/css/diffobj.css
+++ b/inst/css/diffobj.css
@@ -33,6 +33,7 @@ DIV.diffobj_container DIV.line.banner {
 DIV.diffobj_container DIV.gutter,
 DIV.diffobj_container DIV.guide,
 DIV.diffobj_container DIV.fill,
+DIV.diffobj_container DIV.context_sep,
 DIV.diffobj_container SPAN.trim {
   color: #999;
 }
