--- a/inst/css/diffobj.css
+++ b/inst/css/diffobj.css
@@ -16,6 +16,9 @@ DIV.diffobj_container DIV.row {
 DIV.diffobj_container DIV.line {
   display: table-cell;
 }
+DIV.diffobj_container DIV.line>DIV {
+  width: 100%;
+}
 DIV.diffobj_container DIV.text {
   display: table-cell;
   width: 100%;
@@ -23,6 +26,9 @@ DIV.diffobj_container DIV.text {
 DIV.diffobj_container DIV.gutter {
   display: table-cell;
   padding: 0 0.2em;
+}
+DIV.diffobj_container DIV.gutter DIV {
+  display: table-cell;
 }
 #diffobj_size_meta DIV.diffobj_container DIV.row {
   width: auto;
@@ -42,6 +48,14 @@ DIV.diffobj_container DIV.summary DIV.detail {
 DIV.diffobj_container DIV.line.banner {
   font-size: 1.2em;
   font-weight: bold;
+  overflow: hidden;
+}
+/* truncate banners */
+DIV.diffobj_container DIV.line.banner DIV.text DIV{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; /* doesn't work with table-fixed */
+  width: 100%;             /* need to compute and set in JS */
 }
 DIV.diffobj_container DIV.gutter,
 DIV.diffobj_container DIV.guide,
