--- a/inst/css/diffobj.css
+++ b/inst/css/diffobj.css
@@ -26,7 +26,7 @@ DIV.diffobj_container DIV.line>DIV {
 }
 DIV.diffobj_container DIV.line.banner>DIV {
   display: table;
-  table-layout: fixed;
+  table-layout: auto; /* set to fixed in JS */
 }
 DIV.diffobj_container DIV.text {
   display: table-cell;
