--- a/inst/css/diffobj.css
+++ b/inst/css/diffobj.css
@@ -139,21 +139,21 @@ DIV.diffobj_container.light.rgb DIV.header {
 
 DIV.diffobj_container.light.yb SPAN.word.insert,
 DIV.diffobj_container.light.yb DIV.line>DIV.insert {
-  background-color: #cbcbf8;
+  background-color: #c2cbff;
 }
 DIV.diffobj_container.light.yb SPAN.word.delete,
 DIV.diffobj_container.light.yb DIV.line>DIV.delete {
-  background-color: #e0e096;
+  background-color: #e9e965;
 }
 DIV.diffobj_container.light.yb DIV.text>DIV.insert {
-  background-color: #eaeaff;
+  background-color: #ececff;
 }
 DIV.diffobj_container.light.yb DIV.text>DIV.insert,
 DIV.diffobj_container.light.yb DIV.line>DIV.insert {
   border-left: 1px solid #3333bb;
 }
 DIV.diffobj_container.light.yb DIV.text>DIV.delete {
-  background-color: #fbfbcd;
+  background-color: #fefecd;
 }
 DIV.diffobj_container.light.yb DIV.text>DIV.delete,
 DIV.diffobj_container.light.yb DIV.line>DIV.delete {
