--- a/inst/css/diffobj.css
+++ b/inst/css/diffobj.css
@@ -115,17 +115,17 @@ DIV.diffobj_container.light.rgb DIV.line>DIV.insert {
 }
 DIV.diffobj_container.light.rgb SPAN.word.delete,
 DIV.diffobj_container.light.rgb DIV.line>DIV.delete {
-  background-color: #f8cbcb;
+  background-color: #f8c2c2;
 }
 DIV.diffobj_container.light.rgb DIV.text>DIV.insert {
-  background-color: #eaffea;
+  background-color: #efffef;
 }
 DIV.diffobj_container.light.rgb DIV.text>DIV.insert,
 DIV.diffobj_container.light.rgb DIV.line>DIV.insert {
   border-left: 1px solid #33bb33;
 }
 DIV.diffobj_container.light.rgb DIV.text>DIV.delete {
-  background-color: #ffecec;
+  background-color: #ffefef;
 }
 DIV.diffobj_container.light.rgb DIV.text>DIV.delete,
 DIV.diffobj_container.light.rgb DIV.line>DIV.delete {
