--- a/inst/css/diffobj.css
+++ b/inst/css/diffobj.css
@@ -4,7 +4,7 @@
  * cues provided by the current set-up are useful (line wraps, etc.)
  */
 
-DIV.diffobj-container PRE {
+DIV.diffobj-container PRE.diffobj-content {
   white-space: pre-wrap;
   margin: 0;
 }
